--- a/server/package.json
+++ b/server/package.json
@@ -122,6 +122,7 @@
     "sequelize-typescript": "^2.1.0",
     "socket.io": "^4.0.0",
     "socket.io-redis": "^6.1.0",
+    "strong-error-handler": "^4.0.0",
     "umzug": "^3.0.0-beta.15",
     "utf-8-validate": "^5.0.4",
     "uuid": "^8.3.2"
