--- a/server/package.json
+++ b/server/package.json
@@ -94,6 +94,8 @@
     "typescript-transform-paths": "^2.2.3"
   },
   "dependencies": {
+    "apollo-server": "^2.21.2",
+    "apollo-server-express": "^2.22.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bufferutil": "^4.0.3",
@@ -106,9 +108,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "graphql": "^15.5.0",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
+    "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
     "node-schedule": "^2.0.0",
     "pg": "^8.5.1",
