--- a/server/package.json
+++ b/server/package.json
@@ -65,6 +65,7 @@
     "@types/cors": "^2.8.10",
     "@types/csurf": "^1.11.0",
     "@types/express-session": "^1.17.3",
+    "@types/fs-extra": "^9.0.9",
     "@types/history": "^4.7.8",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.1",
@@ -109,10 +110,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "graphql-compose-mongoose": "^9.2.0",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "mongoose": "^5.12.2",
+    "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.10.0",
     "node-schedule": "^2.0.0",
     "pg": "^8.5.1",
