--- a/server/package.json
+++ b/server/package.json
@@ -96,6 +96,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.21.2",
+    "apollo-server-core": "^2.22.1",
     "apollo-server-express": "^2.22.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -111,9 +112,11 @@
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "graphql-compose-mongoose": "^9.2.0",
+    "graphql-playground-middleware-express": "^1.7.22",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
+    "logrocket": "^1.0.14",
     "mongoose": "^5.12.2",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.10.0",
