--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "dev": "./node_modules/.bin/nodemon --config \"./nodemon.json\"",
-    "test:unit": "cross-env NODE_ENV=test jest",
+    "test:unit": "cross-env NODE_ENV=test ts-jest",
     "test:unit:watch": "cross-env NODE_ENV=test jest -o --watch --detectOpenHandles",
     "test:unit:coverage": "cross-env NODE_ENV=test --coverage --detectOpenHandles",
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage",
@@ -26,36 +26,6 @@
     "build2": "./node_modules/.bin/ttsc --project tsconfig.prod.json",
     "build": "./node_modules/.bin/ttsc --project tsconfig.json",
     "test": "snyk test"
-  },
-  "jest": {
-    "testTimeout": 10000,
-    "testEnvironment": "node",
-    "globalSetup": "./test/jest.setup.ts",
-    "globalTeardown": "./test/jest.teardown.ts",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text-summary",
-      "clover"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "statements": 95,
-        "branches": 95,
-        "lines": 95,
-        "functions": 95
-      }
-    },
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ]
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -67,7 +37,7 @@
     "@types/express-session": "^1.17.3",
     "@types/fs-extra": "^9.0.9",
     "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "@types/node-fetch": "^2.5.8",
@@ -87,7 +57,7 @@
     "snyk": "^1.493.0",
     "start-server-and-test": "^1.12.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "ttypescript": "^1.5.12",
