--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.organization=paolocattani
 sonar.projectKey=paolocattani_calcetto
 sonar.projectName=Calcetto
 sonar.projectVersion=2.16.3
-#sonar.typescript.tsconfigPath=tsconfig.json
+sonar.typescript.tsconfigPath=tsconfig.json
 
 # General : Encoding, Language, Debug
 sonar.sourceEncoding=UTF-8
@@ -19,18 +19,18 @@ sonar.verbose=false
 sonar.sources=src, server
 
 # Exclusions
-# sonar.exclusions=build/**, analysis/** , **/coverage/**
+sonar.exclusions=build, analysis , coverage
 # sonar.exclusions=build/**
-# sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
-# sonar.cpd.exclusions= build/**
+# sonar.cpd.exclusions= **/build/**, analysis/** , **/coverage/**
+# sonar.cpd.exclusions= */**
 # Fixme:
-# sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
+# sonar.coverage.exclusions= **/build/**, analysis/** , **/coverage/**
 # sonar.coverage.exclusions= */**
 
 # Coverage and Test
-# sonar.dynamicAnalysis=reuseReports
-# sonar.javascript.lcov.reportPaths=coverage-cypress/lcov.info,server/coverage/lcov.info
-# sonar.eslint.reportPaths=analysis/eslint-report.json
+sonar.dynamicAnalysis=reuseReports
+sonar.javascript.lcov.reportPaths=coverage/lcov.info,server/coverage/lcov.info
+sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
 sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
