--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -103,6 +103,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     name: Unit tests backend
+    defaults:
+      run:
+        working-directory: server
     steps:
       - uses: actions/checkout@v2
       # Restore cache
@@ -119,7 +122,7 @@ jobs:
             ${{ runner.os }}-
       # Install dependencies
       - name: Install dependencies
-        run: cd server && npm ci
+        run: npm ci
       # unit test 
       - name: Unit Tests Backend
         run: npm run test:unit:coverage
