--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -90,7 +90,7 @@ jobs:
         run: npm ci
       # unit test
       - name: Unit Tests Frontend
-        run: npm run CRA:test:coverage
+        run: CI=true npm run CRA:test:coverage
       # Save coverage for sonar
       - name: Upload build
         uses: actions/upload-artifact@v2.2.2
@@ -103,9 +103,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     name: Unit tests backend
-    defaults:
-      run:
-        working-directory: server
     steps:
       - uses: actions/checkout@v2
       # Restore cache
@@ -122,16 +119,16 @@ jobs:
             ${{ runner.os }}-
       # Install dependencies
       - name: Install dependencies
-        run: npm ci
+        run: cd server && npm ci
       # unit test 
       - name: Unit Tests Backend
-        run: npm run test:unit:coverage
+        run: cd server && npm run test:unit:coverage
       # Save coverage for sonar
       - name: Upload build
         uses: actions/upload-artifact@v2.2.2
         with:
           name: coverage-backend
-          path: coverage
+          path: server/coverage
 
   #-----------------------------------------
   # Code Quality ( Sonarcloud )
