--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "CRA:build": "cross-env NODE_ENV=production react-scripts build ",
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test --env=jsdom --testResultsProcessor ./node_modules/jest-sonar-reporter",
-    "CRA:test:coverage": "react-scripts test --env=jsdom --testResultsProcessor ./node_modules/jest-sonar-reporter --coverage --watchAll=false",
+    "CRA:test:coverage": "react-scripts test --env=jsdom --testResultsProcessor ./node_modules/jest-sonar-reporter --coverage",
     "-----TEST----": "---------------------------",
     "test:app": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run test:app:server\" \"npm run test:app:client\"",
     "test:app:server": "cross-env NODE_ENV=test npm run prod:heroku:server",
