--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,7 +17,8 @@ jobs:
     name: Build
     strategy:
       matrix:
-        node-version: [ 10.x, 12.x, 14.x]
+        #node-version: [ 10.x, 12.x, 14.x]
+        node-version: [ 14.x ]
     steps:
       - uses: actions/checkout@v2
       # Set up Node
@@ -119,7 +120,7 @@ jobs:
             ${{ runner.os }}-
       # Install dependencies
       - name: Install dependencies
-        run: cd server && npm i
+        run: npm ci && cd server && npm i
       # unit test 
       - name: Unit Tests Backend
         run: cd server && npm run test:unit:coverage
