--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,8 +17,7 @@ jobs:
     name: Build
     strategy:
       matrix:
-        #node-version: [ 10.x, 12.x, 14.x]
-        node-version: [ 14.x ]
+        node-version: [ 10.x, 12.x, 14.x]
     steps:
       - uses: actions/checkout@v2
       # Set up Node
