--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.organization=paolocattani
 sonar.projectKey=paolocattani_calcetto
 sonar.projectName=Calcetto
 sonar.projectVersion=2.16.3
-sonar.typescript.tsconfigPath=tsconfig.json
+#sonar.typescript.tsconfigPath=tsconfig.json
 
 # General : Encoding, Language, Debug
 sonar.sourceEncoding=UTF-8
@@ -15,8 +15,8 @@ sonar.verbose=false
 # Sources
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-# sonar.sources=src, server, analysis, coverage, build
-sonar.sources=src, server
+sonar.sources=src, server, analysis, coverage
+# sonar.sources=src, server
 
 # Exclusions
 sonar.exclusions=build, analysis , coverage
