--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -29,7 +29,8 @@ sonar.exclusions=build, analysis , coverage
 
 # Coverage and Test
 sonar.dynamicAnalysis=reuseReports
-sonar.javascript.lcov.reportPaths=coverage/lcov.info,server/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+#sonar.javascript.lcov.reportPaths=coverage/lcov.info,server/coverage/lcov.info
 sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
