--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,11 +15,11 @@ sonar.verbose=false
 # Sources
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=src, server, analysis, coverage
-# sonar.sources=src, server
+# sonar.sources=src, server, analysis, coverage
+sonar.sources=src, server
 
 # Exclusions
-sonar.exclusions=build, analysis , coverage
+# sonar.exclusions=build, analysis , coverage
 # sonar.exclusions=build/**
 # sonar.cpd.exclusions= **/build/**, analysis/** , **/coverage/**
 # sonar.cpd.exclusions= */**
@@ -28,10 +28,10 @@ sonar.exclusions=build, analysis , coverage
 # sonar.coverage.exclusions= */**
 
 # Coverage and Test
-sonar.dynamicAnalysis=reuseReports
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-#sonar.javascript.lcov.reportPaths=coverage/lcov.info,server/coverage/lcov.info
-sonar.eslint.reportPaths=analysis/eslint-report.json
+# sonar.dynamicAnalysis=reuseReports
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info,server/coverage/lcov.info
+# sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
 sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
