--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - develop
-      - pipeline
+      - graphql
   pull_request:
     branches:
       - develop
@@ -32,10 +32,10 @@ jobs:
           cache-name: cache-node-modules
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-npm-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
+            ${{ runner.os }}-npm-${{ env.cache-name }}-
+            ${{ runner.os }}-npm-
             ${{ runner.os }}-
       # Add exect
       - name: Add exec to cli
@@ -50,22 +50,27 @@ jobs:
       - name: Upload build
         uses: actions/upload-artifact@v2.2.2
         with:
-          name: build-${{ matrix.node-version }}
+          name: build-${{ matrix.node-version }}-frontend
           path: build
-      # Save build for later
+      - name: Upload build
+        uses: actions/upload-artifact@v2.2.2
+        with:
+          name: build-${{ matrix.node-version }}-backend
+          path: server/build
+      # Save Eslint Analysis fron Sonar
       - name: Upload analysis
         uses: actions/upload-artifact@v2.2.2
         with:
           name: analysis-${{ matrix.node-version }}
           path: analysis
   #-----------------------------------------
-  # unit test
-  #-----------------------------------------
-  unit-test:
+  # Unit Test
+
+  # Frontend
+  unit-test-frontend:
     runs-on: ubuntu-latest
     needs: build
-    name: Unit tests
-    # For now disable this step, only run e2e
+    name: Unit tests frontend
     steps:
       - uses: actions/checkout@v2
       # Restore cache
@@ -75,39 +80,97 @@ jobs:
           cache-name: cache-node-modules
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-npm-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
+            ${{ runner.os }}-npm-${{ env.cache-name }}-
+            ${{ runner.os }}-npm-
             ${{ runner.os }}-
       # Install dependencies
       - name: Install dependencies
-        run: |
-          npm ci
-          cd server && npm ci
-      # unit test FE
+        run: npm ci
+      # unit test
       - name: Unit Tests Frontend
-        run: npm run CRA:test
-      # unit test BE
+        run: npm run CRA:test:coverage
+      # Save coverage for sonar
+      - name: Upload build
+        uses: actions/upload-artifact@v2.2.2
+        with:
+          name: coverage-frontend
+          path: coverage
+
+  # Backend
+  unit-test-backend:
+    runs-on: ubuntu-latest
+    needs: build
+    name: Unit tests backend
+    if: ${{ 1==2 }}
+    steps:
+      - uses: actions/checkout@v2
+      # Restore cache
+      - name: Restore cache Node.js modules
+        uses: actions/cache@v2.1.4
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-${{ env.cache-name }}-
+            ${{ runner.os }}-npm-
+            ${{ runner.os }}-
+      # Install dependencies
+      - name: Install dependencies
+        run: npm ci && cd server && npm i
+      # unit test 
       - name: Unit Tests Backend
-        if: ${{ 1==2 }}
-        run: |
-          cd server
-          npm run test:unit
+        run: cd server && npm run test:unit:coverage
+        env:
+          SERVER_PORT: 5001
+          ORIGIN_WHITE_LIST: 'http://localhost:5000;http://localhost:5001'
+          SERVER_FORCE: true
+          SERVER_TOKEN_EXPIRES_IN: 2h
+          SERVER_SECRET: 'This_Is_Not_The_Real_Secret'
+          SERVER_HASH: 'This_Is_Not_The_Real_Hash'
+          STATIC_CONTENTS_CACHE: 10000
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}          
+          DATABASE_SCHEMA: test          
+          REDISCLOUD_URL: ${{ secrets.REDISCLOUD_URL }}          
+          REDISCLOUD_PASSWORD: ${{ secrets.REDISCLOUD_PASSWORD }}          
+          REDISCLOUD_DB: ${{ secrets.REDISCLOUD_DB }}          
+          MONGODB_URL: ${{ secrets.MONGODB_URL }}          
+      # Save coverage for sonar
+      - name: Upload build
+        uses: actions/upload-artifact@v2.2.2
+        with:
+          name: coverage-backend
+          path: server/coverage
 
   #-----------------------------------------
   # Code Quality ( Sonarcloud )
   #-----------------------------------------
   analyze:
     runs-on: ubuntu-latest
-    needs: build
+    # needs: [build, unit-test-frontend, unit-test-backend]
+    needs: [build, unit-test-frontend]
     name: Code Quality
+    continue-on-error: true
     steps:
+        # Download Analysis, Coverage Frontend and Backend
         - name: Download analysis
           uses: actions/download-artifact@v2
           with:
             name: analysis-14.x
             path: analysis
+        - name: Download coverage frontend
+          uses: actions/download-artifact@v2
+          with:
+            name: coverage-frontend
+            path: coverage
+        # - name: Download coverage backend
+        #   uses: actions/download-artifact@v2
+        #   with:
+        #     name: coverage-backend
+        #     path: server/coverage
         # https://github.com/marketplace/actions/sonarcloud-scan
         - name: SonarCloud Scan
           uses: sonarsource/sonarcloud-github-action@master
