--- a/server/package.json
+++ b/server/package.json
@@ -18,44 +18,14 @@
   },
   "scripts": {
     "dev": "./node_modules/.bin/nodemon --config \"./nodemon.json\"",
-    "test:unit": "cross-env NODE_ENV=test jest",
-    "test:unit:watch": "cross-env NODE_ENV=test jest -o --watch --detectOpenHandles",
-    "test:unit:coverage": "cross-env NODE_ENV=test --coverage --detectOpenHandles",
+    "test:unit": "cross-env NODE_ENV=test ./node_modules/.bin/jest -o --detectOpenHandles",
+    "test:unit:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/jest --coverage",
+    "test:unit:watch": "cross-env NODE_ENV=test ./node_modules/.bin/jest -o --watch --detectOpenHandles",
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage",
     "prod": "node build/server/server.js",
     "build2": "./node_modules/.bin/ttsc --project tsconfig.prod.json",
-    "build": "./node_modules/.bin/ttsc --project tsconfig.json",
+    "build": "./node_modules/.bin/ttsc --project tsconfig.json --clean",
     "test": "snyk test"
-  },
-  "jest": {
-    "testTimeout": 10000,
-    "testEnvironment": "node",
-    "globalSetup": "./test/jest.setup.ts",
-    "globalTeardown": "./test/jest.teardown.ts",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text-summary",
-      "clover"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "statements": 95,
-        "branches": 95,
-        "lines": 95,
-        "functions": 95
-      }
-    },
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ]
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -65,8 +35,9 @@
     "@types/cors": "^2.8.10",
     "@types/csurf": "^1.11.0",
     "@types/express-session": "^1.17.3",
+    "@types/fs-extra": "^9.0.9",
     "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "@types/node-fetch": "^2.5.8",
@@ -86,7 +57,7 @@
     "snyk": "^1.493.0",
     "start-server-and-test": "^1.12.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "ttypescript": "^1.5.12",
@@ -94,6 +65,9 @@
     "typescript-transform-paths": "^2.2.3"
   },
   "dependencies": {
+    "apollo-server": "^2.21.2",
+    "apollo-server-core": "^2.22.1",
+    "apollo-server-express": "^2.22.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bufferutil": "^4.0.3",
@@ -106,9 +80,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "graphql": "^15.5.0",
+    "graphql-compose": "^7.25.1",
+    "graphql-compose-mongoose": "^9.2.0",
+    "graphql-playground-middleware-express": "^1.7.22",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
+    "mongoose": "^5.12.2",
+    "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.10.0",
     "node-schedule": "^2.0.0",
     "pg": "^8.5.1",
