--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@
 sonar.organization=paolocattani
 sonar.projectKey=paolocattani_calcetto
 sonar.projectName=Calcetto
-sonar.projectVersion=2.16.2
+sonar.projectVersion=2.16.3
 #sonar.typescript.tsconfigPath=tsconfig.json
 
 # General : Encoding, Language, Debug
@@ -15,21 +15,22 @@ sonar.verbose=false
 # Sources
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-# sonar.sources=src, server, analysis, coverage, build
+# sonar.sources=src, server, analysis, coverage
 sonar.sources=src, server
 
 # Exclusions
-# sonar.exclusions=build/**, analysis/** , **/coverage/**
+# sonar.exclusions=build, analysis , coverage
 # sonar.exclusions=build/**
-# sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
-# sonar.cpd.exclusions= build/**
+# sonar.cpd.exclusions= **/build/**, analysis/** , **/coverage/**
+# sonar.cpd.exclusions= */**
 # Fixme:
-# sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
+# sonar.coverage.exclusions= **/build/**, analysis/** , **/coverage/**
 # sonar.coverage.exclusions= */**
 
 # Coverage and Test
 # sonar.dynamicAnalysis=reuseReports
-# sonar.javascript.lcov.reportPaths=coverage-cypress/lcov.info,server/coverage/lcov.info
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info,server/coverage/lcov.info
 # sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
